# trash_manager

./: docker-compose-dev.yml  env.example  pyproject.toml  tox.ini
docker/dev/: Dockerfile
trash_manager/core/: asgi.py  settings.py  urls.py  wsgi.py
